@@ -1,13 +1,30 @@
-FROM a_generc_image:a-specific-tag
+FROM tomcat:9.0.2-alpine
+
+RUN apk update; apk add --no-cache \
+    curl wget unzip grep sed \
+    postgresql-client \
+    ttf-freefont
+
+ENV PATH=/util:$PATH \
+    JAVA_OPTS='-XX:SoftRefLRUPolicyMSPerMB=36000 -XX:+UseParNewGC -XX:NewRatio=2 -XX:+AggressiveOpts'
 
 # Allow configuration before things start up.
 COPY conf/entrypoint /
 ENTRYPOINT ["/entrypoint"]
-CMD ["component_name"]
+CMD ["tomcat"]
 
-# Example plugin use.
 COPY conf/.plugins/bats /tmp/bats
 RUN /tmp/bats/install.sh
+
+COPY conf/.plugins/runner /tmp/runner
+RUN /tmp/runner/install.sh
+
+COPY conf/.plugins/pg /tmp/pg
+RUN /tmp/pg/install.sh
+
+COPY conf/CATALINA_HOME /tmp/conf/CATALINA_HOME
+COPY conf/webapps /tmp/conf/webapps
+COPY conf/subconf.sh /tmp/conf/subconf.sh
 
 # This may come in handy.
 ONBUILD ARG DOCKER_USER
